[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/dev_tools/file_inspector.gd" type="Script" id=1]

[node name="FileInspector" type="CanvasLayer"]
script = ExtResource( 1 )
current_dir = "C:/Users/Nif/AppData/Roaming/Godot/app_userdata/FeelVibes"

[node name="Button" type="Button" parent="."]
anchor_left = 0.00585938
anchor_top = 0.948333
anchor_right = 0.0722656
anchor_bottom = 0.988333
text = "Inspect"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -322.5
margin_top = -250.0
margin_right = 322.5
margin_bottom = 250.0
rect_min_size = Vector2( 645, 500 )
resizable = true
access = 2

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
